--- a/exemplos/aulacss.html
+++ b/exemplos/aulacss.html
@@ -7,56 +7,23 @@
         <title>Aula 1 CSS</title>
     </head>
     <body>
-         p{
-            <h1 style="background-color: rgb(145, 235, 235); border:1px solid blueviolet; width: 70%; margin: 0 auto;">Aula 1 CSS</h1>
-         }
-         #especial {
-            font-size: 24pt;
-            color: ciano;
-         }
-       <p{font-size=18}
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse omnis tenetur in? Sunt magni, amet deleniti officia nihil nemo, libero, quas sint veritatis quisquam quibusdam? Possimus reprehenderit maxime ut at.
-        </p> 
-     <p class="mult3"></p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse omnis tenetur in? Sunt magni, amet deleniti officia nihil nemo, libero, quas sint veritatis quisquam quibusdam? Possimus reprehenderit maxime ut at.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse omnis tenetur in? Sunt magni, amet deleniti officia nihil nemo, libero, quas sint veritatis quisquam quibusdam? Possimus reprehenderit maxime ut at.
-        </p>
-        <p><p class="mult3" id="especial"
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse omnis tenetur in? Sunt magni, amet deleniti officia nihil nemo, libero, quas sint veritatis quisquam quibusdam? Possimus reprehenderit maxime ut at.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse omnis tenetur in? Sunt magni, amet deleniti officia nihil nemo, libero, quas sint veritatis quisquam quibusdam? Possimus reprehenderit maxime ut at.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse omnis tenetur in? Sunt magni, amet deleniti officia nihil nemo, libero, quas sint veritatis quisquam quibusdam? Possimus reprehenderit maxime ut at.
-        </p><p class="mult3"></p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse omnis tenetur in? Sunt magni, amet deleniti officia nihil nemo, libero, quas sint veritatis quisquam quibusdam? Possimus reprehenderit maxime ut at.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse omnis tenetur in? Sunt magni, amet deleniti officia nihil nemo, libero, quas sint veritatis quisquam quibusdam? Possimus reprehenderit maxime ut at.
-        </p><p class="mult3"></p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse omnis tenetur in? Sunt magni, amet deleniti officia nihil nemo, libero, quas sint veritatis quisquam quibusdam? Possimus reprehenderit maxime ut at.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse omnis tenetur in? Sunt magni, amet deleniti officia nihil nemo, libero, quas sint veritatis quisquam quibusdam? Possimus reprehenderit maxime ut at.
-        </p><p class="mult3"></p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse omnis tenetur in? Sunt magni, amet deleniti officia nihil nemo, libero, quas sint veritatis quisquam quibusdam? Possimus reprehenderit maxime ut at.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse omnis tenetur in? Sunt magni, amet deleniti officia nihil nemo, libero, quas sint veritatis quisquam quibusdam? Possimus reprehenderit maxime ut at.
-        </p><p class="mult3"></p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse omnis tenetur in? Sunt magni, amet deleniti officia nihil nemo, libero, quas sint veritatis quisquam quibusdam? Possimus reprehenderit maxime ut at.
-        </p>
-        <p>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse omnis tenetur in? Sunt magni, amet deleniti officia nihil nemo, libero, quas sint veritatis quisquam quibusdam? Possimus reprehenderit maxime ut at.
-        </p><p class="mult3"></p>
+        <p id="p1">
+            Lorem ipsum dolor sit amet , consectetur adipiscing elit . Cras
+            vehicula bibendum arcu sit amet lacinia . Sed dui nulla .
+            </p>
+            <p id="p2">
+            Otorrinolaringologista .
+            </p>
+            <p id="p3">
+            Lorem ipsum dolor sit amet ,
+            consectetur adipiscing elit . Cras vehicula
+            bibendum arcu .
+            Sed
+            dui nulla , cursus et lacinia eu , vulputate ac dolor .
+            Quisque faucibus congue congue .
+            </p>
+            <p id="p4">
+            Jonas Hirata .            
+            </p>
     </body>
 </html>
